2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* circ.h: Increase portability.
	* circoverlap.cpp: Ditto.
	* circoverlap.h: Ditto.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* circ.cpp: Make use of new interface for traceroot.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* circoverlap.cpp: Virtualise kz.
	