@@ -1,3 +1,7 @@
+2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* circmode.cpp: Prevent division by 0.
+
 2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* circ.h: Increase portability.
